turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:1: error: not found: value getCouleurSOl
  getCouleurSOl() match {
  ^