turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  getCouleurSOl() match {
    case Color.white => setCouleurSol(Color.black)
    droite()
    avance()
    case Color.black => setCouleurSol(Color.black)
    gauche()
    avance()
  }

	def setCouleurSol(couleur:Color) {
  	setCouleurBrosse(couleur)
  	baisseBrosse()
  	leveBrosse()
	}
}